--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 <body>
   <main id="main">
-    <h1 id="title"></h1>
+    <h1 id="title">Alan Mathison Turing</h1>
+    <h3 id="sub-title">o pai da computação</h3>
     <div id="img-div">
-      <img src="" alt="" id="img">
-      <p id="img-caption"></p>
+      <img src="https://aventurasnahistoria.uol.com.br/media/uploads/personagem/alan_capa_certa_widelg.jpg" alt="Fotografia de Alan Turing em um deck" id="img">
+      <p id="img-caption">Fotografia de Alan Turing durante sua juventude / Crédito: Wikimedia Commons</p>
     </div>
-    <ul id="curiosities">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+    <ul id="curiosities">Algumas curiosidades sobre Alan Turing:
+      <li>Alan Turing era considerado um corredor excepcional.</li>
+      <li>Na Segunda Guerra, Turing trabalhava no Bletchley Park, onde ficava o centro britânico de decifração de códigos do Government Code and Cypher School (GC&CS). Sua unidade era a Hut 8, responsável pela análise criptográfica dos códigos da marinha alemã.</li>
+      <li>Foi na Hut 8 que Turing conheceu Joan Clarke, com quem teve um noivado de curtíssima duração — ele revelou para ela que era homossexual.</li>
+      <li>Mesmo com o fim do noivado, Joan continuou amiga de Turing até a morte dele, em 1954. Ele se matou com cianureto, antes de completar 42 anos.</li>
+      <li>Na época, atos homossexuais eram ilegais no Reino Unido. Turing começou a ser julgado em fevereiro de 1952 e foi considerado culpado por "indecência".</li>
+      <li>A máquina eletromecânica que ele inventou durante a Segunda Guerra, a "máquina de Turing", ajudou a decifrar os códigos criptografados pela máquina Enigma, usada pela marinha da Alemanha nazista. A invenção de Turing é apontada como um dos motivos da vitória dos Aliados e é considerada um fator para guerra não ter se estendido ainda por mais anos — o que causaria ainda mais mortes.</li>
     </ul>
     <a href="" id="tribute-link" target="_blank"></a>
   </main>
