--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>FCC Tribute Page</title>
 </head>
 <body>
   <main id="main">
-    <h1 id="title">Alan Mathison Turing</h1>
-    <h3 id="sub-title">o pai da computação</h3>
+    <div class="header">
+      <h1 id="title">Alan Mathison Turing</h1>
+      <h3 id="sub-title">o pai da computação</h3>
+    </div>
     <div id="img-div">
       <img src="https://aventurasnahistoria.uol.com.br/media/uploads/personagem/alan_capa_certa_widelg.jpg" alt="Fotografia de Alan Turing em um deck" id="img">
       <p id="img-caption">Fotografia de Alan Turing durante sua juventude / Crédito: Wikimedia Commons</p>
     </div>
-    <ul id="curiosities">Algumas curiosidades sobre Alan Turing:
-      <li>Alan Turing era considerado um corredor excepcional.</li>
-      <li>Na Segunda Guerra, Turing trabalhava no Bletchley Park, onde ficava o centro britânico de decifração de códigos do Government Code and Cypher School (GC&CS). Sua unidade era a Hut 8, responsável pela análise criptográfica dos códigos da marinha alemã.</li>
-      <li>Foi na Hut 8 que Turing conheceu Joan Clarke, com quem teve um noivado de curtíssima duração — ele revelou para ela que era homossexual.</li>
-      <li>Mesmo com o fim do noivado, Joan continuou amiga de Turing até a morte dele, em 1954. Ele se matou com cianureto, antes de completar 42 anos.</li>
-      <li>Na época, atos homossexuais eram ilegais no Reino Unido. Turing começou a ser julgado em fevereiro de 1952 e foi considerado culpado por "indecência".</li>
-      <li>A máquina eletromecânica que ele inventou durante a Segunda Guerra, a "máquina de Turing", ajudou a decifrar os códigos criptografados pela máquina Enigma, usada pela marinha da Alemanha nazista. A invenção de Turing é apontada como um dos motivos da vitória dos Aliados e é considerada um fator para guerra não ter se estendido ainda por mais anos — o que causaria ainda mais mortes.</li>
-    </ul>
-    <a href="" id="tribute-link" target="_blank"></a>
+    <div class="list-container">
+      <h3>Algumas curiosidades sobre Alan Turing:</h3>
+      <ul id="curiosities">
+        <li>Alan Turing era considerado um corredor excepcional.</li>
+        <li>Na Segunda Guerra, Turing trabalhava no Bletchley Park, onde ficava o centro britânico de decifração de códigos do Government Code and Cypher School (GC&CS). Sua unidade era a Hut 8, responsável pela análise criptográfica dos códigos da marinha alemã.</li>
+        <li>Foi na Hut 8 que Turing conheceu Joan Clarke, com quem teve um noivado de curtíssima duração — ele revelou para ela que era homossexual.</li>
+        <li>Mesmo com o fim do noivado, Joan continuou amiga de Turing até a morte dele, em 1954. Ele se matou com cianureto, antes de completar 42 anos.</li>
+        <li>Na época, atos homossexuais eram ilegais no Reino Unido. Turing começou a ser julgado em fevereiro de 1952 e foi considerado culpado por "indecência".</li>
+        <li>A máquina eletromecânica que ele inventou durante a Segunda Guerra, a "máquina de Turing", ajudou a decifrar os códigos criptografados pela máquina Enigma, usada pela marinha da Alemanha nazista. A invenção de Turing é apontada como um dos motivos da vitória dos Aliados e é considerada um fator para guerra não ter se estendido ainda por mais anos — o que causaria ainda mais mortes.</li>
+      </ul>
+    </div>
+    <div class="p-container">
+      <p>Recomendo você ler mais a respeito desse incrível ser humano em sua página na <a href="https://pt.wikipedia.org/wiki/Alan_Turing" id="tribute-link" target="_blank">Wikipedia</a>.
+      </p>
+    </div>
   </main>
 </body>
 </html>
